style.css: Fix the package search suite/arch link formatting
The suite/architecture links in the package search are squished together
when there are more than one suite/architecture for a package.

Each suite/architecture should be displayed on its own line.

--- a/public/style.css
+++ b/public/style.css
@@ -132,6 +132,10 @@
   margin-left: 2em;
 }
 
+#package-select li .search-sub-links a {
+  display: block;
+}
+
 #package-select a.package-page:hover {
   background-color: #eeeeec;
 }
